--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
 #table-wrapper {
     width: 60%;
     margin: 0 auto;
-    padding-top: 15px;
 }
 
 table {
     width: 100%;
+    margin-top: 20px;
 }
 
 td {
